<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/one"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/one"/>
    <item
        android:id="@+id/two"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/two"/>
    <item
        android:id="@+id/three"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/three"/>
    <item
        android:id="@+id/four"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/four"/>
    <item
        android:id="@+id/five"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/five"/>
    <item
        android:id="@+id/six"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/six"/>
</menu>